Add basic share receiving functionality on iOS

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,3 +28,18 @@ target 'Wundershine' do
     'DevSupport',
   ]
 end
+
+target 'ShareReceiver' do
+  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
+  pod 'React', :path => '../node_modules/react-native', :subspecs => [
+    'Core',
+    'CxxBridge',
+    'DevSupport',
+    'RCTText',
+    'RCTNetwork',
+    'RCTWebSocket'
+    # .. and the rest of submodules you need
+  ]
+end
