--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"launch:ios": "react-native run-ios --simulator='iPhone X'",
 		"launch:android": "react-native run-android",
-		"test": "jest",
+		"test": "jest --passWithNoTests",
 		"test:e2e": "detox test --configuration $E2E_CONFIG",
 		"test:e2e:ios": "E2E_CONFIG=ios.sim.release yarn test:e2e",
 		"test:e2e:android": "E2E_CONFIG=android.emu.release yarn test:e2e",
@@ -44,6 +44,7 @@
 		"react-native-loading-placeholder": "^0.0.6",
 		"react-native-navigation": "1.1.407",
 		"react-native-sentry": "0.35.2",
+		"react-native-share-extension": "^1.2.1",
 		"react-native-typography": "^1.3.0",
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
