--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,8 @@
 rootProject.name = 'Wundershine'
 
+include ':app', ':react-native-share-extension'
+project(':react-native-share-extension').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share-extension/android')
+
 include ':react-native-blur'
 project(':react-native-blur').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-blur/android')
 
