--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"react-native-loading-placeholder": "^0.0.6",
 		"react-native-navigation": "1.1.407",
 		"react-native-sentry": "0.35.2",
-		"react-native-share-extension": "^1.2.1",
+		"react-native-share-extension": "https://github.com/Wundershine/react-native-share-extension",
 		"react-native-typography": "^1.3.0",
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
