--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react-native-linear-gradient": "^2.4.0",
 		"react-native-loading-placeholder": "^0.0.6",
 		"react-native-navigation": "1.1.407",
+		"react-native-path": "^0.0.5",
 		"react-native-sentry": "0.35.2",
 		"react-native-share-extension": "https://github.com/Wundershine/react-native-share-extension",
 		"react-native-typography": "^1.3.0",
