--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -181,6 +181,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':react-native-linear-gradient')
+    compile project(':react-native-background-upload')
 }
 
 // Run this once to be able to run the application with BUCK
