--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,6 +3,9 @@ rootProject.name = 'Wundershine'
 include ':app', ':react-native-share-extension'
 project(':react-native-share-extension').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share-extension/android')
 
+include ':react-native-background-upload'
+project(':react-native-background-upload').projectDir = new File(settingsDir, '../node_modules/react-native-background-upload/android')
+
 include ':react-native-blur'
 project(':react-native-blur').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-blur/android')
 
