--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"qs": "^6.5.1",
 		"react": "16.3.0-alpha.1",
 		"react-native": "0.54.2",
+		"react-native-background-upload": "https://github.com/Wundershine/react-native-background-upload",
 		"react-native-blur": "3.2.2",
 		"react-native-code-push": "5.3.1",
 		"react-native-config": "0.11.5",
@@ -49,7 +50,8 @@
 		"react-native-typography": "^1.3.0",
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
-		"tslib": "1.9.0"
+		"tslib": "1.9.0",
+		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
 		"babel-core": "6.26.0",
