--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,8 @@ target 'Wundershine' do
     'RCTPushNotification',
     'DevSupport',
   ]
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
 end
 
 target 'ShareReceiver' do
