--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-native-code-push": "5.3.1",
 		"react-native-config": "0.11.5",
 		"react-native-easy-grid": "^0.1.17",
+		"react-native-fetch-blob": "^0.10.8",
 		"react-native-interactable": "0.1.10",
 		"react-native-joi": "^0.0.5",
 		"react-native-keyboard-aware-scroll-view": "^0.5.0",
