--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,8 @@
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 0,
     "react-native/no-inline-styles": 0,
-    "react-native/no-color-literals": 0
+    "react-native/no-color-literals": 0,
+    "no-underscore-dangle": 0
   },
   "settings": {
     "import/resolver": {
