--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+    "postinstall": "node -r dotenv/config node_modules/wundershine-data-fetcher",
 		"build:env": "sh ./scripts/build-env.sh",
 		"build:e2e": "detox build --configuration $E2E_CONFIG",
 		"build:e2e:ios": "E2E_CONFIG=ios.sim.release yarn build:e2e",
@@ -26,6 +27,7 @@
 		"axios": "^0.18.0",
 		"bytes": "^3.0.0",
 		"cloudinary-core": "^2.5.0",
+		"dotenv": "^5.0.1",
 		"mobx": "4.0.2",
 		"mobx-persist": "0.4.1",
 		"mobx-react": "5.0.0",
@@ -54,7 +56,8 @@
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
 		"tslib": "1.9.0",
-		"uuid": "^3.2.1"
+		"uuid": "^3.2.1",
+		"wundershine-data-fetcher": "^2.0.0"
 	},
 	"devDependencies": {
 		"babel-core": "6.26.0",
