--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"qs": "^6.5.1",
 		"react": "16.3.0-alpha.1",
 		"react-native": "0.54.2",
+		"react-native-animatable": "^1.2.4",
 		"react-native-background-upload": "https://github.com/Wundershine/react-native-background-upload",
 		"react-native-blur": "3.2.2",
 		"react-native-code-push": "5.3.1",
