--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"react-native-config": "0.11.5",
 		"react-native-easy-grid": "^0.1.17",
 		"react-native-fetch-blob": "^0.10.8",
-		"react-native-interactable": "0.1.10",
+		"react-native-interactable": "^0.1.10",
 		"react-native-joi": "^0.0.5",
 		"react-native-keyboard-aware-scroll-view": "^0.5.0",
 		"react-native-linear-gradient": "^2.4.0",
