--- a/ios/Wundershine/Info.plist
+++ b/ios/Wundershine/Info.plist
@@ -33,6 +33,8 @@
 			</array>
 		</dict>
 	</array>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Users can import photos to order digital prints</string>
 	<key>CodePushDeploymentKey</key>
 	<string>__RN_CONFIG_IOS_CODEPUSH_DEPLOYMENT_KEY</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
