Integrated multipicker working on both platforms

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,6 +116,7 @@ android {
         multiDexEnabled true
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     splits {
         abi {
