--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,12 +164,12 @@ configurations.all {
 }
 
 dependencies {
-    compile project(':react-native-image-crop-picker')
-    compile project(':react-native-interactable')
-    compile project(':react-native-fetch-blob')
+    implementation project(':react-native-image-crop-picker')
+    implementation project(':react-native-interactable')
+    implementation project(':react-native-fetch-blob')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    compile project(':react-native-share-extension')
-    compile "com.facebook.react:react-native:+"
+    implementation project(':react-native-share-extension')
+    implementation "com.facebook.react:react-native:+"
     implementation project(':react-native-sentry')
     implementation project(':react-native-navigation')
     implementation project(':react-native-code-push')
@@ -184,8 +184,8 @@ dependencies {
     androidTestImplementation(project(":detox"), {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':react-native-linear-gradient')
-    compile project(':react-native-background-upload')
+    implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-background-upload')
 }
 
 // Run this once to be able to run the application with BUCK
