--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,6 +164,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':react-native-fs')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-interactable')
     implementation project(':react-native-fetch-blob')
