--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-
 		"build:env": "sh ./scripts/build-env.sh",
 		"build:e2e": "detox build --configuration $E2E_CONFIG",
 		"build:e2e:ios": "E2E_CONFIG=ios.sim.release yarn build:e2e",
@@ -44,6 +43,7 @@
 		"react-native-config": "0.11.5",
 		"react-native-easy-grid": "^0.1.17",
 		"react-native-fetch-blob": "^0.10.8",
+		"react-native-fs": "^2.9.12",
 		"react-native-gesture-responder": "^0.1.1",
 		"react-native-image-crop-picker": "^0.20.1",
 		"react-native-interactable": "^0.1.10",
