--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
 		"tslib": "1.9.0",
-		"uuid": "^3.2.1",
-		"wundershine-data-fetcher": "^2.0.0"
+		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
 		"babel-core": "6.26.0",
