--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"react-native-loading-placeholder": "^0.0.6",
 		"react-native-navigation": "1.1.446",
 		"react-native-path": "^0.0.5",
+		"react-native-popup-menu": "^0.13.1",
 		"react-native-sentry": "0.35.2",
 		"react-native-share-extension": "https://github.com/Wundershine/react-native-share-extension",
 		"react-native-typography": "^1.3.0",
