--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 		"p-min-delay": "^2.0.0",
 		"prop-types": "15.6.1",
 		"qs": "^6.5.1",
-		"react": "16.3.0-alpha.1",
-		"react-native": "0.54.2",
+		"react": "16.3.1",
+		"react-native": "0.55.4",
 		"react-native-animatable": "^1.2.4",
 		"react-native-background-upload": "https://github.com/Wundershine/react-native-background-upload",
 		"react-native-blur": "3.2.2",
