--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"bytes": "^3.0.0",
 		"cloudinary-core": "^2.5.0",
 		"country-list": "^1.1.0",
+		"deep-equal": "^1.0.1",
 		"dotenv": "^5.0.1",
 		"mobx": "4.0.2",
 		"mobx-persist": "0.4.1",
