--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'Wundershine' do
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'tipsi-stripe', :path => '../node_modules/tipsi-stripe'
+
 end
 
 target 'ShareReceiver' do
