--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,10 @@ buck-out/
 *.keystore
 
 # fastlane
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+*fastlane/report.xml
+*fastlane/Preview.html
+*fastlane/screenshots
+*.zip
 
 # Environment (react-native-config)
 .env
