--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,10 +128,10 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("../keystores/release.keystore")
-            storePassword "$System.env.ANDROID_KEYSTORE_PASSWORD"
-            keyAlias "release"
-            keyPassword "$System.env.ANDROID_KEYSTORE_PASSWORD"
+            storeFile file(System.getenv("HOME") + "/keystores/release.keystore")
+            storePassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PASSWORD")
+            keyAlias System.getenv("BITRISEIO_ANDROID_KEYSTORE_ALIAS")
+            keyPassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
         }
     }
     buildTypes {
