--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-native-linear-gradient": "^2.4.0",
 		"react-native-loading-placeholder": "^0.0.6",
 		"react-native-material-dropdown": "^0.11.1",
+		"react-native-modal": "^6.1.0",
 		"react-native-navigation": "1.1.446",
 		"react-native-path": "^0.0.5",
 		"react-native-popup-menu": "^0.13.1",
