--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,6 +178,7 @@ dependencies {
     implementation project(':react-native-blur')
     implementation "com.google.android.gms:play-services-base:11.6.0"
     implementation "com.android.support:appcompat-v7:25.0.0"
+    implementation("com.android.support:design:27.1.0")
     implementation "com.facebook.react:react-native:+"
     implementation "com.android.support:multidex:1.0.1"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
