--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"react-native-easy-grid": "^0.1.17",
 		"react-native-fs": "^2.9.12",
 		"react-native-gesture-responder": "^0.1.1",
-		"react-native-image-crop-picker": "^0.20.1",
+		"react-native-image-crop-picker": "0.20.3",
 		"react-native-interactable": "^0.1.10",
 		"react-native-joi": "^0.0.5",
 		"react-native-keyboard-aware-scroll-view": "^0.5.0",
