--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"test:e2e:ios": "E2E_CONFIG=ios.sim.release yarn test:e2e",
 		"test:e2e:android": "E2E_CONFIG=android.emu.release yarn test:e2e",
     "lint": "eslint src __tests__ --fix",
-    "postinstall": "sh ./scripts/get-core-data.sh",
+    "postinstall": "dotenv sh ./scripts/get-core-data.sh",
 		"precommit": "npm run lint",
 		"prepush": "npm run test",
 		"prepare": "patch-package"
