--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
           <action android:name="android.intent.action.SEND" />
           <action android:name="android.intent.action.SEND_MULTIPLE" />
           <category android:name="android.intent.category.DEFAULT" />
-          <data android:mimeType="image/*" />
+          <data android:mimeType="image/jpeg" />
         </intent-filter>
       </activity>
     </application>
