--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build:env": "sh ./scripts/build-env.sh",
 		"build:e2e": "detox build --configuration $E2E_CONFIG",
 		"build:e2e:ios": "E2E_CONFIG=ios.sim.release yarn build:e2e",
-		"build:e2e:android": "E2E_CONFIG=android.emu.release yarn build:e2e",
+    "build:e2e:android": "E2E_CONFIG=android.emu.release yarn build:e2e",
+    "clean": "react-native-clean-project",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"launch:ios": "react-native run-ios --simulator='iPhone X'",
 		"launch:android": "react-native run-android",
@@ -95,6 +96,7 @@
 		"patch-package": "5.1.1",
 		"postinstall-prepare": "1.0.1",
 		"react-dom": "16.3.0-alpha.1",
+		"react-native-clean-project": "^2.0.0",
 		"react-native-rename": "2.2.2",
 		"react-test-renderer": "16.3.0-alpha.1",
 		"ts-jest": "22.4.1",
