--- a/ios/Wundershine/Info.plist
+++ b/ios/Wundershine/Info.plist
@@ -57,6 +57,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>MaterialIcons.ttf</string>
+		<string>wundershine-logos.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
