Add react-native-splash-screen (iOS only for now)

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"build:env": "sh ./scripts/build-env.sh",
 		"build:e2e": "detox build --configuration $E2E_CONFIG",
 		"build:e2e:ios": "E2E_CONFIG=ios.sim.release yarn build:e2e",
-    "build:e2e:android": "E2E_CONFIG=android.emu.release yarn build:e2e",
-    "clean": "react-native-clean-project",
+		"build:e2e:android": "E2E_CONFIG=android.emu.release yarn build:e2e",
+		"clean": "react-native-clean-project",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"launch:ios": "react-native run-ios --simulator='iPhone X'",
 		"launch:android": "react-native run-android",
@@ -62,6 +62,7 @@
 		"react-native-popup-menu": "^0.13.1",
 		"react-native-sentry": "0.35.2",
 		"react-native-share-extension": "https://github.com/Wundershine/react-native-share-extension",
+		"react-native-splash-screen": "3.0.6",
 		"react-native-typography": "^1.3.0",
 		"react-native-ui-lib": "3.3.32",
 		"react-native-vector-icons": "^4.5.0",
