--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,8 @@ target 'Wundershine' do
 
   pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
 end
 
 target 'ShareReceiver' do
