--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"prop-types": "15.6.1",
 		"qs": "^6.5.1",
 		"react": "16.3.1",
+		"react-fast-compare": "^2.0.2",
 		"react-native": "0.55.4",
 		"react-native-animatable": "^1.2.4",
 		"react-native-background-upload": "https://github.com/Wundershine/react-native-background-upload",
