--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"react-native-typography": "^1.3.0",
 		"react-native-ui-lib": "3.3.173",
 		"react-native-vector-icons": "^4.5.0",
-		"tipsi-stripe": "6.1.2",
+		"tipsi-stripe": "^5.2.1",
 		"tslib": "1.9.0",
 		"uuid": "^3.2.1"
 	},
