--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,10 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    compileOptions {
+      sourceCompatibility JavaVersion.VERSION_1_8
+      targetCompatibility JavaVersion.VERSION_1_8
+    }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
