--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,9 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 configurations.all {
